# Pico-Router

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: build.yml
docs/: nuxt.config.ts  package.json  pnpm-lock.yaml
docs/app/: app.config.ts
docs/app/components/: AppLogo.vue
docs/app/components/content/: Mermaid.vue  Pico3d.vue
docs/app/pages/: [...slug].vue
docs/content/: index.md
docs/content/1.getting-started/: 1.index.md  2.project-setup.md  3.getting-started.md  3.running-demo.md  4.project-workflow.md  5.roadmap.md
docs/content/2.custom-tooling/: .navigation.yml
docs/public/models/: 3d-pico.glb
include/benchmark/: steady_clock_timer.h
include/benchmarks/: astar_bench.h  steady_clock_timer.h
include/demo/: astar_demo.h  sample_graph_demo.h
include/fixtures/: mock_graphs.h
include/pathfind/: astar.h  graph.h  graph_io.h  heuristic.h  path.h
include/platform/: init.h  system_init.h  uart.h
platform/host/: init_host.cc  system_init_host.cc  uart_host.cc
platform/mock/: uart_mock.cc
platform/pico/: init_pico.cc  system_init_pico.cc  uart_pico.cc
renode/: pico.repl  run.resc
src/: main.cc
src/benchmarks/: astar_bench.cc
src/demo/: astar_demo.cc
src/fixtures/: mock_graphs.cc
src/pathfind/: astar.cc
src/platform/pico/: system_init_pico.cc  uart_pico.cc
tests/: CMakeLists.txt
tests/fixtures/: mock_graph.cc  mock_graphs.cc
tests/pathfind/: astar_test.cc
tools/: .gitignore  requirements.txt
tools/osm_converter/: README.md  pyproject.toml  requirements.txt
tools/osm_converter/src/: config_loader.py  graph_packer.py  graph_types.py  main.py  osm_parser.py  pbf_parser.py
tools/osm_converter/src/assets/: sample_map.osm.pbf
tools/osm_converter/tests/: config_loader_test.py
